# Legal_Case_Triage_Agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: api.py  main.py
backend/agents/: Dockerfile  explainer.py  memory.py  planner.py  reasoner.py  router.py  validator.py
backend/data/: triage.db
backend/rules/: eligibility_rules.yaml
backend/services/: triage_engine.py
frontend/: index.html
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: chatinput.jsx  decisioncard.jsx  loadingstate.jsx  triagesteps.jsx
