[project]
name = "langchain-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.1",
    "google-generativeai>=0.8.5",
    "huggingface>=0.0.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.2",
    "langchain-huggingface>=1.2.0",
    "langchain[anthropic,google-genai,mistralai,openai]>=1.1.3",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.3",
]
